Removed top-nav-collapse feature + fixed weirdly large footer on index
Removed padding from .navbar-custom and deleted excess <br>s in footer.

--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -135,7 +135,7 @@ hr{
 }
 @media (min-width: 768px) {
   .navbar-custom {
-    padding: 10px 0;
+    padding: 0px 0;
     border-bottom: none;
     letter-spacing: 1px;
     background: black;
